[package]
name = "ac-primitives"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Substrate-api-client primitive types"
readme = "README.md"
categories = ["no-std"]


[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ['derive'] }
impl-serde = { version = "0.5", default-features = false }
primitive-types = { version = "0.13", default-features = false, features = ["serde_no_std", "scale-info"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# substrate no_std
sp-core = { default-features = false, features = ["full_crypto", "serde"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-runtime = { default-features = false, features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-staking = { default-features = false, features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-version = { default-features = false, features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-weights = { default-features = false, features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
# need to add this for the app_crypto macro
sp-application-crypto = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }

# substrate std / wasm only
frame-system = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
pallet-assets = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
pallet-balances = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
pallet-contracts = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
pallet-staking = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }

[dev-dependencies]
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-2" }


[features]
default = ["std"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    "codec/std",
    "primitive-types/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    # substrate no_std
    "sp-core/std",
    "sp-crypto-hashing/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
    "sp-staking/std",
    "sp-version/std",
    "sp-weights/std",
    "sp-application-crypto/std",
    # substrate std
    "frame-system",
    "pallet-assets",
    "pallet-balances",
]
staking-xt = ["std", "pallet-staking"]
contracts-xt = ["std", "pallet-contracts"]
