[package]
name = "ac-primitives"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Substrate-api-client primitive types"
readme = "README.md"
categories = ["no-std"]


[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ['derive'] }
impl-serde = { version = "0.5", default-features = false }
primitive-types = { version = "0.13", default-features = false, features = ["serde_no_std", "scale-info"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# substrate no_std
sp-core = { version = "35.0.0", default-features = false, features = ["full_crypto", "serde"] }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false, features = ["serde"] }
sp-runtime-interface = { version = "29.0.0", default-features = false }
sp-staking = { version = "37.0.0", default-features = false, features = ["serde"] }
sp-version = { version = "38.0.0", default-features = false, features = ["serde"] }
sp-weights = { version = "31.0.0", default-features = false, features = ["serde"] }
# need to add this for the app_crypto macro
sp-application-crypto = { version = "39.0.0", default-features = false, features = ["full_crypto"] }

# substrate std / wasm only
frame-system = { version = "39.1.0", optional = true }
pallet-assets = { version = "41.0.0", optional = true }
pallet-balances = { version = "40.0.1", optional = true }
pallet-contracts = { version = "39.0.0", optional = true }
pallet-staking = { version = "39.0.1", optional = true }

[dev-dependencies]
frame-metadata-hash-extension = { version = "0.7.0" }
sp-keyring = { version = "40.0.0" }


[features]
default = ["std"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    "codec/std",
    "primitive-types/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    # substrate no_std
    "sp-core/std",
    "sp-crypto-hashing/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
    "sp-staking/std",
    "sp-version/std",
    "sp-weights/std",
    "sp-application-crypto/std",
    # substrate std
    "frame-system",
    "pallet-assets",
    "pallet-balances",
]
staking-xt = ["std", "pallet-staking"]
contracts-xt = ["std", "pallet-contracts"]
