[package]
name = "ac-primitives"
version = "1.18.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Substrate-api-client primitive types"
readme = "README.md"
categories = ["no-std"]


[dependencies]
codec = { workspace = true, features = ["derive"] }
impl-serde = { workspace = true }
primitive-types = { workspace = true, features = ["serde_no_std", "scale-info"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc"] }

# substrate no_std
sp-core = { workspace = true, features = ["full_crypto", "serde"] }
sp-crypto-hashing = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-runtime-interface = { workspace = true }
sp-staking = { workspace = true, features = ["serde"] }
sp-version = { workspace = true, features = ["serde"] }
sp-weights = { workspace = true, features = ["serde"] }
# need to add this for the app_crypto macro
sp-application-crypto = { workspace = true, features = ["full_crypto"] }

# substrate std / wasm only
frame-system = { optional = true, workspace = true }
pallet-assets = { optional = true, workspace = true }
pallet-balances = { optional = true, workspace = true }
pallet-contracts = { optional = true, workspace = true }
pallet-staking = { optional = true, workspace = true }

[dev-dependencies]
sp-keyring = { workspace = true }


[features]
default = ["std"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    "codec/std",
    "primitive-types/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    # substrate no_std
    "sp-core/std",
    "sp-crypto-hashing/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
    "sp-staking/std",
    "sp-version/std",
    "sp-weights/std",
    "sp-application-crypto/std",
    # substrate std
    "frame-system",
    "pallet-assets",
    "pallet-balances/std",
]
staking-xt = ["std", "pallet-staking"]
contracts-xt = ["std", "pallet-contracts"]
