[package]
name = "substrate-api-client"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
# no_std deps
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.79", default-features = false,  features = ["alloc"] }

# std only
futures = { version = "0.3", optional = true }
jsonrpsee = { version = "0.16", optional = true, features = ["async-client", "client-ws-transport", "jsonrpsee-types"] }
primitive-types = { version = "0.12.1", optional = true, features = ["codec"] }
thiserror = { version = "1.0.30", optional = true }
tungstenite = { version = "0.18.0", optional = true, features = ["native-tls"] }
url = { version = "2.0.0", optional = true }
ws = { version = "0.9.2", optional = true, features = ["ssl"] }

# Substrate no_std compatible dependencies
frame-metadata = { default-features = false, git = "https://github.com/paritytech/frame-metadata", features = ["v14", "serde_full", "decode"] }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# Substrate std only (or no_std = wasm) dependencies
frame-support = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-rpc = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# local deps
ac-compose-macros = { path = "../compose-macros", default-features = false }
ac-node-api = { path = "../node-api", default-features = false }
ac-primitives = { path = "../primitives", default-features = false }

[dev-dependencies]
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
kitchensink-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std", "jsonrpsee-client"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    # no_std
    "codec/std",
    "hex/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    # std only
    "primitive-types",
    "thiserror",
    "url",
    # substrate no_std
    "frame-metadata/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
    "sp-std/std",
    # substrate std only
    "frame-support",
    "sp-rpc",
    "sp-version",
    # local deps
    "ac-compose-macros/std",
    "ac-node-api/std",
    "ac-primitives/std",
]
jsonrpsee-client = ["std", "jsonrpsee", "futures"]
tungstenite-client = ["std", "tungstenite"]
ws-client = ["std", "ws"]
staking-xt = ["std"]
