[package]
name = "test-no-std"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
libc = { version = "0.2", default-features = false }

# local dependencies
ac-compose-macros = { path = "../compose-macros", version = "1.17", default-features = false, optional = true, features = ["disable_target_static_assertions", "sync-api"] }
ac-node-api = { path = "../node-api", version = "1.17", default-features = false, optional = true, features = ["disable_target_static_assertions"] }
ac-primitives = { path = "../primitives", version = "1.17", default-features = false, optional = true, features = ["disable_target_static_assertions"] }
substrate-api-client = { path = "..", version = "1.17", default-features = false, optional = true, features = ["disable_target_static_assertions", "sync-api"] }

# substrate dependencies
sp-io = { version = "39.0.0", default-features = false, features = ["disable_oom", "disable_panic_handler"] }

[features]
# It is better to test the no-std crates standalone (don't enable both features at the same time) because dependency
# leaks might cause successful `no-std` builds, which would fail in standalone build.
api-client = ["substrate-api-client"]
compose-macros = ["ac-compose-macros"]
node-api = ["ac-node-api"]
primitives = ["ac-primitives"]
