[package]
name = "test-no-std"
version = "1.18.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
libc = { version = "0.2", default-features = false }

# local dependencies
ac-compose-macros = { workspace = true, optional = true, features = ["disable_target_static_assertions", "sync-api"] }
ac-node-api = { workspace = true, optional = true, features = ["disable_target_static_assertions"] }
ac-primitives = { workspace = true, optional = true, features = ["disable_target_static_assertions"] }
substrate-api-client = { workspace = true, optional = true, features = ["disable_target_static_assertions", "sync-api"] }

# substrate dependencies
sp-io = { workspace = true, features = ["disable_oom", "disable_panic_handler"] }

[features]
# It is better to test the no-std crates standalone (don't enable both features at the same time) because dependency
# leaks might cause successful `no-std` builds, which would fail in standalone build.
api-client = ["substrate-api-client"]
compose-macros = ["ac-compose-macros"]
node-api = ["ac-node-api"]
primitives = ["ac-primitives"]
