[package]
name = "test_no_std"
version = "0.1.0"
authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = { version="0.2", default-features=false }

[dependencies.substrate-api-client] 
package = "substrate-api-client"
path = ".."
default-features=false
features=["full_crypto"]

[dependencies.application-crypto]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
package = "sp-application-crypto"
default-features = false
features = ["full_crypto"]

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features=false
features = ["disable_oom", "disable_panic_handler"]

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
