[package]
name = "ac-testing"
version = "0.1.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
    'derive',
] }
serde_json = { version = "1.0.79" }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros", "time"] }
wabt = "0.10.0"

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
kitchensink-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-core = { features = [
    "full_crypto",
], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-identity = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# local deps
substrate-api-client = { path = "..", features = [
    "tungstenite-client",
    "ws-client",
    "staking-xt",
] }

[features]
default = ["ws-client"]
ws-client = []
