[package]
name = "ac-examples-async"
version = "1.17.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
blake2 = "0.10.6"
clap = { version = "4.5", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.7", features = ['derive'] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"

# Substrate dependencies
frame-system = { version = "39.1.0" }
pallet-balances = { version = "40.0.1" }
pallet-recovery = { version = "39.0.0" }
pallet-staking = { version = "39.0.1" }
sp-core = { version = "35.0.0" }
sp-keyring = { version = "40.0.0" }
sp-runtime = { version = "40.1.0" }
sp-weights = { version = "31.0.0" }
dilithium-crypto = { workspace = true, default-features = false, features = ["full_crypto"] }
resonance-runtime = { workspace = true, default-features = false, features=["std"] }
# pallet-merkle-airdrop = { workspace = true, default-features = false, features=["std"] }
poseidon-resonance = { workspace = true, default-features = false }
trie-db = { version = "0.29.1", default-features = false }
sp-trie = { version = "38.0.0", default-features = false }
sp-state-machine = { version = "0.44.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
# local deps
substrate-api-client = { path = "../..", version = "1.17", features = ["staking-xt", "contracts-xt", "jsonrpsee-client"] }
pallet-reversible-transfers = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ['derive'] }
