[package]
name = "ac-examples-async"
version = "1.17.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.7", features = ['derive'] }
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
wabt = "0.10"

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
rococo-runtime = { workspace = true }
pallet-balances = { workspace = true }
pallet-identity = { workspace = true }
pallet-recovery = { workspace = true }
pallet-staking = { workspace = true }
sp-core = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

# local deps
substrate-api-client = { path = "../..", version = "1.17", features = ["staking-xt", "contracts-xt"] }
