[package]
name = "ac-examples-async"
version = "1.18.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { workspace = true, features = ["std"] }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { workspace = true }

# Substrate dependencies
frame-system = { workspace = true, features = ["std"] }
rococo-runtime = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-recovery = { workspace = true, features = ["std"] }
pallet-staking = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-weights = { workspace = true, features = ["std"] }

# local deps
substrate-api-client = { workspace = true, features = ["std", "jsonrpsee-client", "staking-xt", "contracts-xt"] }
