[package]
name = "ac-examples-sync"
version = "1.16.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# local deps
substrate-api-client = { path = "../..", version = "1.16", default-features = false, features = ["tungstenite-client", "ws-client"] }
