[package]
name = "ac-examples-sync"
version = "1.17.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"

# Substrate dependencies
sp-core = { version = "35.0.0" }
sp-keyring = { version = "40.0.0" }
sp-runtime = { version = "40.1.0" }
sp-weights = { version = "31.0.0" }

# local deps
substrate-api-client = { path = "../..", version = "1.17", default-features = false, features = ["tungstenite-client", "ws-client"] }
