[package]
name = "ac-examples-sync"
version = "1.18.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"

# Substrate dependencies
sp-core = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

# local deps
substrate-api-client = { workspace = true, features = ["tungstenite-client"] }
