[package]
name = "ac-examples-wasm"
version = "1.18.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true, features = ["full_crypto", "serde"] }
sp-runtime = { workspace = true }
substrate-api-client = { workspace = true }
