[package]
name = "ac-examples-wasm"
version = "1.22.0"
license = "Apache-2.0"
edition = "2024"

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true, features = ["full_crypto", "serde"] }
sp-runtime = { workspace = true }
substrate-api-client = { workspace = true }
