[package]
name = "ac-testing-async"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.7", features = ['derive'] }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
jsonrpsee = { version = "0.24", features = ["async-client", "client-ws-transport-tls", "jsonrpsee-types", "server"] }

resonance-runtime = { workspace = true, default-features = false }
# Substrate dependencies
frame-support = { version = "39.1.0" }
sp-core = { version = "35.0.0" }
sp-crypto-hashing = { version = "0.1.0" }
sp-keyring = { version = "40.0.0" }
sp-runtime = { version = "40.1.0" }
sp-staking = { version = "37.0.0" }
pallet-balances = { version = "40.0.1" }
pallet-society = { version = "39.0.0" }

# local deps
substrate-api-client = { path = "../..", version = "1.17", features = ["staking-xt", "contracts-xt"] }
