[package]
name = "ac-testing-async"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { workspace = true }
tokio = { workspace = true }
jsonrpsee = { workspace = true }


# Substrate dependencies
frame-support = { workspace = true }
rococo-runtime = { workspace = true }
sp-core = { workspace = true }
sp-crypto-hashing = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
pallet-balances = { workspace = true }
pallet-society = { workspace = true }

# local deps
substrate-api-client = { workspace = true }
