[package]
name = "ac-testing-async"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { workspace = true, features = ["std"] }
tokio = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }


# Substrate dependencies
frame-support = { workspace = true, features = ["std"] }
rococo-runtime = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-crypto-hashing = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-society = { workspace = true, features = ["std"] }

# local deps
substrate-api-client = { workspace = true, features = ["std", "staking-xt", "contracts-xt", "jsonrpsee-client"] }
