[package]
name = "ac-testing-sync"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
# Substrate dependencies
sp-application-crypto = { version = "39.0.0" }
sp-core = { version = "35.0.0" }
sp-runtime = { version = "40.1.0" }

# local deps
substrate-api-client = { path = "../..", version = "1.17", default-features = false, features = ["tungstenite-client", "ws-client"] }
ac-keystore = { path = "../../keystore", version = "1.17" }
