[package]
name = "ac-testing-sync"
version = "1.18.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
# Substrate dependencies
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# local deps
substrate-api-client = { workspace = true, features = ["tungstenite-client"] }
ac-keystore = { workspace = true }
